--- a/DtekShutdowns/appsettings.json
+++ b/DtekShutdowns/appsettings.json
@@ -21,5 +21,8 @@
             "6.1",
             "6.2"
         ]
+    },
+    "DtekClient": {
+        "Endpoint": "https://www.dtek-dnem.com.ua/ua/shutdowns"
     }
 }
