--- a/DtekShutdowns/appsettings.json
+++ b/DtekShutdowns/appsettings.json
@@ -24,5 +24,6 @@
     },
     "DtekClient": {
         "Endpoint": "https://www.dtek-dnem.com.ua/ua/shutdowns"
-    }
+    },
+    "UseMockScheduleProvider": false
 }
