Add schedule caching

--- a/DtekShutdowns/appsettings.json
+++ b/DtekShutdowns/appsettings.json
@@ -25,5 +25,8 @@
     "DtekClient": {
         "Endpoint": "https://www.dtek-dnem.com.ua/ua/shutdowns"
     },
-    "UseMockScheduleProvider": false
+    "UseMockScheduleProvider": false,
+    "DtekScheduleProvider": {
+        "CacheTtlMinutes": 15
+    }
 }
